--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 						</p>
 						<div class="flex space-x-4">
 							<a
-								href="files/CV_Finn_Sinclair.pdf"
+								href="files/CV_UPDATED.pdf"
 								target="_blank"
 								class="bg-white text-blue-600 px-6 py-3 rounded-lg font-medium transition hover:bg-blue-600 hover:text-white border border-blue-600"
 							>
